Fixed collapsed logo

--- a/Web/src/styles/index.less
+++ b/Web/src/styles/index.less
@@ -38,10 +38,10 @@
 }
 
 .kafe-logo {
+    overflow: hidden;
     height: 40px;
     margin: 16px 0;
-    padding-left: 74px;
-    padding-right: 16px;
+    padding-left: 80px;
     color: white;
     font-size: 1.8em;
     text-transform: uppercase;
